[gd_scene load_steps=4 format=3 uid="uid://b72ihap4ul00u"]

[ext_resource type="Script" path="res://resources/test_helpers/slicing_visual.gd" id="1_2iyx1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ic7ts"]
cull_mode = 2

[sub_resource type="QuadMesh" id="QuadMesh_jqqqq"]
material = SubResource("StandardMaterial3D_ic7ts")
size = Vector2(0.3, 0.3)

[node name="SlicingVisual" type="Node3D"]
script = ExtResource("1_2iyx1")

[node name="MeshInstance3D1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.323088, -1.35274)

[node name="SliceTrans" type="MeshInstance3D" parent="MeshInstance3D1"]
visible = false
mesh = SubResource("QuadMesh_jqqqq")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.545935, -0.2, -1.35274)

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.711839, -0.2, -1.35274)
